feat(phase0): Setup et fondations - dÃ©pendances, SEO, structure de dossiers
- Installer React Hook Form et @hookform/resolvers
- CrÃ©er helper SEO (generateMetadata)
- Configurer sitemap.ts et robots.txt
- CrÃ©er structure de dossiers (components/layout, forms, sections, lib)
- CrÃ©er fichiers index.ts pour exports organisÃ©s
- Documenter variables d'environnement

TÃ¢ches complÃ©tÃ©es:
- T-001-000-001: Configuration des dÃ©pendances
- T-001-000-002: Variables d'environnement
- T-001-000-003: Configuration SEO
- T-001-000-004: Structure de dossiers

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "clean": "rm -rf .next out"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@monorepo/contracts": "workspace:*",
     "@monorepo/ui": "workspace:*",
     "@monorepo/utils": "workspace:*",
@@ -18,6 +19,7 @@
     "next": "^15.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.69.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -29,4 +31,3 @@
     "typescript": "^5.3.3"
   }
 }
-
