--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "clean": "rm -rf .next out"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.3.0",
     "@hookform/resolvers": "^5.2.2",
     "@monorepo/contracts": "workspace:*",
     "@monorepo/ui": "workspace:*",
