--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.562.0",
     "next": "^15.0.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.9.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.69.0",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@types/highlight.js": "^10.1.0",
     "@types/node": "^20.11.0",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.23",
