--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,6 +26,7 @@
     "fastify": "^4.26.0",
     "gray-matter": "^4.0.3",
     "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.10.1",
     "reading-time": "^1.5.0",
     "sharp": "^0.33.0",
     "zod": "^3.22.4"
@@ -34,6 +35,7 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.0",
+    "@types/nodemailer": "^6.4.21",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "eslint": "^8.56.0",
