Add explicit Nginx rules for sitemap.xml and robots.txt SEO files

--- a/nginx-immo-annonces-new.conf
+++ b/nginx-immo-annonces-new.conf
@@ -31,6 +31,23 @@ server {
         access_log off;
     }
 
+    # --- SEO critical files ---
+    location = /sitemap.xml {
+        root /var/www/immo-annonces-new/public-site;
+        try_files $uri =404;
+        add_header Content-Type "application/xml";
+        expires 1d;
+        add_header Cache-Control "public, must-revalidate";
+    }
+
+    location = /robots.txt {
+        root /var/www/immo-annonces-new/public-site;
+        try_files $uri =404;
+        add_header Content-Type "text/plain";
+        expires 1d;
+        add_header Cache-Control "public, must-revalidate";
+    }
+
     # API Proxy - Forward to Fastify
     location /api/ {
         proxy_pass http://immo_api_backend/;
