Fix: Convert blog markdown content to HTML using marked library
- Add marked dependency to package.json
- Update blog/[slug].astro to parse markdown to HTML
- Update ressources/blog/[slug].astro to parse markdown to HTML
- Fixes issue where raw markdown syntax was displayed instead of formatted HTML

--- a/apps/public-site/package.json
+++ b/apps/public-site/package.json
@@ -12,7 +12,8 @@
     "@monorepo/contracts": "workspace:*",
     "@monorepo/ui": "workspace:*",
     "@monorepo/utils": "workspace:*",
-    "astro": "^5.16.6"
+    "astro": "^5.16.6",
+    "marked": "^17.0.1"
   },
   "devDependencies": {
     "@astrojs/mdx": "^4.3.13",
